Adding Open Service Console action